2006-10-07  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (show_feed_contents): Provide a user for
	ShowFeedContentsForm.

	* templates/user.html: Show the podcasts associated with the user.

	* models.py (Podcast): Add many-to-many relationship between
	podcasts and users.
	(find_or_create_podcast): Make sure there is a relationship
	between the user and podcast.

	* forms.py (ShowFeedContentsForm.save): Move the real logic into
	find_or_create_podcast in the models module.
	(ShowFeedContentsForm.__init__): We may need a user to save the
	new podcast.
	(ShowFeedContentsForm.save): Pass our user to
	find_or_create_podcast.

	* models.py (find_or_create_podcast): New function with logic
	moved from the forms module.

	* views.py (show_feed_contents): The manipulator save method
	returns the Podcast and the parsed data from the feed.

	* models.py (QueueItem): Add author_name and author_email fields.

	* forms.py (ShowFeedContentsForm.save): Use feedparser to pull
	data from the feed and store it in the db.  Return the Podcast
	instance and the parsed data.

2006-10-01  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Use wipeIn/wipeOut instead of just setting
	the inner html.

	* views.py (show_feed_contents): Log any errors from the form
	validation and return error text containing those error messages.

	* templates/user.html: Rename callback to make the name unique.

	* templates/two_columns.html: Add a status message div.

	* forms.py (ShowFeedContentsForm): New class to manage input
	fields in the show_feed_contents form.

	* views.py (user): Add some form handling for the
	show_feed_contents form.
	(newfunc): Simplistic decorator to trap exceptions and convert
	them to error messages.
	(show_feed_contents): Start a view to show the items in a feed
	submitted by the user.

	* urls.py (urlpatterns): Add show_feed_contents before the generic
	user home page view.  Make the regex for username more strict.
