@@ -1,5 +1,14 @@
 2006-10-07  Doug Hellmann  <dhellmann@racemi.com>
 
+	* views.py (add_feed): Change show_feed_contents to add_feed.
+
+	* urls.py (urlpatterns): Change show_feed_contents to add_feed.
+
+	* templates/user.html: Change show_feed_contents to add_feed.
+
+	* forms.py (AddFeedForm.__init__): Rename class to reflect its
+	true use.
+
 	* views.py (show_feed_contents): Provide a user for
 	ShowFeedContentsForm.
 
